20240701-040958：比对到x开始。

--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -11077,7 +11077,7 @@ bilibili	blbl
 忖度	cndh
 惨跌	cndi
 吃奶的劲	cndj
-穿得	cndk
+穿搭	cndk
 忖道	cndm
 吃奶的力气	cndq
 窜到	cnds
@@ -110525,7 +110525,6 @@ QQ密码	qqmm
 说真话	slih
 双子座	slii
 双足	slii
-审理之中	slii
 势利之交	slij
 视作	slij
 双周刊	slik
@@ -110948,19 +110947,14 @@ QQ密码	qqmm
 收敛止血	slzx
 圣战	slzy
 双子座	slzz
-审理之中	slzz
-送	sm
 数	sm
+送	sm
 释	sm
 首	sma
-上门安装	smai
 炻	smai
 颂	smaj
 受案	sman
 首	smao
-生命安全	smaq
-生命安全	smau
-上门安装	smaz
 数百倍	smbb
 烧杯	smbc
 数百	smbd
@@ -126092,8 +126086,8 @@ Z	vyz
 温和	wdht
 温带海洋	wdhy
 涡	wdi
-污浊	wdid
 污渍	wdid
+污浊	wdid
 歪打正着	wdii
 温州	wdim
 温中	wdio
@@ -126219,8 +126213,8 @@ Z	vyz
 无敌于天下	wdyx
 鋈	wdyy
 无动于衷	wdyz
-污浊	wdzd
 污渍	wdzd
+污浊	wdzd
 温州	wdzm
 温中	wdzo
 无地自容	wdzr
@@ -126484,9 +126478,9 @@ Z	vyz
 五原	wfya
 五·一	wfyd
 五月份	wfyf
+五音	wfyh
 五月花	wfyh
 五言	wfyh
-五音	wfyh
 五一节	wfyj
 五岳	wfyr
 五言诗	wfys
@@ -126522,13 +126516,12 @@ Z	vyz
 未变	wgbh
 顽固不化	wgbh
 无别	wgbi
-未卜	wgbj
 玩伴	wgbj
+未卜	wgbj
 无不可	wgbk
-无功不受禄	wgbl
-无补	wgbl
 未必	wgbl
-未被	wgbl
+无补	wgbl
+无功不受禄	wgbl
 王八	wgbm
 无边	wgbn
 无比	wgbs
@@ -126566,8 +126559,8 @@ Z	vyz
 无毒	wgdg
 无端	wgdh
 五官端正	wgdi
-无关大局	wgdj
 武当	wgdj
+无关大局	wgdj
 武打	wgdk
 未对	wgdl
 武大郎	wgdl
@@ -126665,17 +126658,16 @@ Z	vyz
 武装部	wgib
 违者	wgif
 为国争光	wgig
-无纸化	wgih
-武装	wgih
 违章	wgih
+武装	wgih
+无纸化	wgih
 卫国战争	wgii
 无踪	wgii
 韦	wgii
 无止境	wgij
-未做	wgij
 王昭君	wgij
-五谷杂粮	wgil
 无证	wgil
+五谷杂粮	wgil
 王炸	wgim
 无字	wgin
 无助	wgio
@@ -126708,8 +126700,8 @@ Z	vyz
 无纪律	wgjl
 未计	wgjl
 无记名	wgjm
-无惧	wgjn
 玩家	wgjn
+无惧	wgjn
 玩具	wgjo
 违禁品	wgjp
 为国捐躯	wgjq
@@ -126743,8 +126735,8 @@ Z	vyz
 歪瓜裂枣	wgli
 违例	wglj
 韦勒克	wglk
-无礼	wgll
 无论	wgll
+无礼	wgll
 未料	wglm
 无力	wgln
 顽劣	wglp
@@ -126766,7 +126758,6 @@ Z	vyz
 未命名	wgmm
 无眠	wgmo
 外国名牌	wgmp
-无明	wgmr
 未明	wgmr
 无名氏	wgms
 未免	wgmw
@@ -126982,15 +126973,14 @@ Z	vyz
 武装部	wgzb
 违者	wgzf
 为国争光	wgzg
-无纸化	wgzh
-武装	wgzh
 违章	wgzh
+武装	wgzh
+无纸化	wgzh
 无踪	wgzi
 无止境	wgzj
-未做	wgzj
 王昭君	wgzj
-五谷杂粮	wgzl
 无证	wgzl
+五谷杂粮	wgzl
 王炸	wgzm
 无字	wgzn
 无助	wgzo
@@ -127050,8 +127040,8 @@ Z	vyz
 亡党	whdj
 忘掉	whdk
 文登	whdl
-妄断	whdm
 弯道	whdm
+妄断	whdm
 弯刀	whdn
 文段	whdr
 望到	whds
@@ -127269,8 +127259,8 @@ Z	vyz
 文艺圈	whyq
 文雅	whys
 文艺圈	whyu
-弯月	whyv
 弯腰	whyv
+弯月	whyv
 文言文	whyw
 文艺学	whyx
 忘在	whza
@@ -127552,7 +127542,7 @@ Z	vyz
 伪证	wjil
 问诊	wjil
 位置	wjio
-物价指数	wjis
+问罪	wjio
 问斩	wjis
 伪造	wjit
 无稽之谈	wjit
@@ -127687,10 +127677,8 @@ Z	vyz
 刎颈之交	wjzj
 伪证	wjzl
 问诊	wjzl
-闻之	wjzl
 位置	wjzo
 问罪	wjzo
-物价指数	wjzs
 问斩	wjzs
 伪造	wjzt
 无稽之谈	wjzt
@@ -127846,9 +127834,8 @@ Z	vyz
 微胖	wkpv
 往前冲	wkqc
 挖潜	wkqd
-往前飞	wkqf
-往期	wkqf
 挖取	wkqf
+往期	wkqf
 挖墙脚	wkqj
 往前开	wkqk
 往前	wkqm
@@ -127884,9 +127871,8 @@ Z	vyz
 挖土	wktu
 往前冲	wkuc
 挖潜	wkud
-往前飞	wkuf
-往期	wkuf
 挖取	wkuf
+往期	wkuf
 挖墙脚	wkuj
 往前开	wkuk
 往前	wkum
@@ -127992,7 +127978,6 @@ Z	vyz
 误	wlig
 误作	wlij
 误诊	wlil
-谓之	wlil
 误炸	wlim
 袜子	wliv
 无论怎样	wliy
@@ -128076,7 +128061,6 @@ Z	vyz
 无立锥之地	wlzd
 误作	wlzj
 误诊	wlzl
-谓之	wlzl
 误炸	wlzm
 袜子	wlzv
 无论怎样	wlzy
@@ -128136,6 +128120,7 @@ Z	vyz
 瓮	wmsk
 为什么	wmsm
 为首	wmsm
+为数	wmsm
 为师	wmsp
 唯命是听	wmst
 万民同乐	wmtl
@@ -128286,13 +128271,10 @@ Z	vyz
 窝窝	wnwn
 窝窝头	wnwt
 宛	wnwx
-往年相比	wnxb
 完形	wnxg
-无奈选择	wnxi
 窝心	wnxl
-悟性	wnxn
 惋惜	wnxn
-无奈选择	wnxz
+悟性	wnxn
 惟有	wnya
 惟一	wnyd
 完颜	wnyh
@@ -128367,8 +128349,8 @@ Z	vyz
 网住	woij
 网摘	woik
 围着	woim
-畏罪	woio
 蚊帐	woio
+畏罪	woio
 围追	woir
 网址	woiu
 蚊子	woiv
@@ -128504,8 +128486,8 @@ Z	vyz
 网住	wozj
 网摘	wozk
 围着	wozm
-畏罪	wozo
 蚊帐	wozo
+畏罪	wozo
 围追	wozr
 网址	wozu
 网子	wozv
@@ -128659,7 +128641,6 @@ Z	vyz
 旺盛	wrsa
 为人师表	wrsb
 污染事故	wrsg
-晚上好	wrsh
 晚熟	wrsh
 晚霜	wrsh
 为人所知	wrsi
@@ -128926,8 +128907,8 @@ Z	vyz
 娃娃脸	wswl
 娃娃亲	wswq
 瓮声瓮气	wswq
-万万	wsws
 娃娃	wsws
+万万	wsws
 万物	wswt
 娃娃亲	wswu
 瓮声瓮气	wswu
@@ -128959,9 +128940,7 @@ Z	vyz
 万一	wsyd
 五四运动	wsyd
 万元	wsyg
-万言	wsyh
 婉言	wsyh
-握手言和	wsyh
 握手言欢	wsyh
 万亿	wsyj
 万语	wsyl
@@ -129024,7 +129003,6 @@ Z	vyz
 稳定性	wtdx
 牾	wtf
 牾	wtfi
-委托付款	wtfk
 午饭	wtfw
 稳固	wtgo
 魏国	wtgo
@@ -129034,35 +129012,34 @@ Z	vyz
 舞钢	wtgy
 稳获	wthe
 物耗	wthg
-委会	wthj
+舞会	wthj
 物候	wthj
 物化	wthj
-舞会	wthj
 午后	wthq
 午	wti
 舞者	wtif
 物资	wtih
 稳准狠	wtih
 舞姿	wtih
-物资局	wtij
 稳住	wtij
+物资局	wtij
 稳扎	wtik
 物证	wtil
 舞着	wtim
 卧榻之旁	wtip
 物质	wtiq
-物种	wtit
 稳重	wtit
+物种	wtit
 魏忠贤	wtix
-物价表	wtjb
-稳居	wtjb
 舞剧	wtjb
+稳居	wtjb
+物价表	wtjb
 魏晋	wtjf
 委决	wtjh
-物件	wtjj
-物价	wtjj
-物价局	wtjj
 稳健	wtjj
+物价	wtjj
+物件	wtjj
+物价局	wtjj
 舞技	wtjk
 味同嚼蜡	wtjl
 午觉	wtjn
@@ -129074,15 +129051,12 @@ Z	vyz
 物理	wtlg
 物料	wtlm
 物力	wtln
-委托律师	wtls
 物力	wtlz
 魏玛	wtmg
 委靡	wtmh
 我们	wtmj
-委托买卖	wtmm
 舞美	wtmm
 舞迷	wtmm
-外台秘要	wtmy
 逶	wtn
 稳拿	wtnj
 迕	wtnn
@@ -129098,7 +129072,6 @@ Z	vyz
 午前	wtqm
 委曲	wtqo
 舞起	wtqu
-委托权限	wtqx
 魏	wtr
 委任状	wtri
 委任	wtrj
@@ -129118,7 +129091,6 @@ Z	vyz
 午膳	wtsv
 物色	wtsw
 魏蜀吴	wtsw
-委托手续	wtsx
 舞厅	wtta
 五体投地	wttd
 物体	wttj
@@ -129134,7 +129106,6 @@ Z	vyz
 午前	wtum
 委曲	wtuo
 舞起	wtuu
-委托权限	wtux
 稳	wtw
 舞	wtw
 文韬武略	wtwl
@@ -129154,7 +129125,6 @@ Z	vyz
 物业费	wtyf
 午夜	wtyh
 委员	wtyi
-委以	wtyl
 物语	wtyl
 物欲	wtym
 午宴	wtyn
@@ -129165,15 +129135,15 @@ Z	vyz
 物资	wtzh
 稳准狠	wtzh
 舞姿	wtzh
-物资局	wtzj
 稳住	wtzj
-稳坐	wtzj
+物资局	wtzj
 稳扎	wtzk
 物证	wtzl
 舞着	wtzm
 卧榻之旁	wtzp
 物质	wtzq
 稳重	wtzt
+物种	wtzt
 魏忠贤	wtzx
 坞	wu
 乌七八糟	wubi
@@ -129401,9 +129371,9 @@ Z	vyz
 外挂式	wwgs
 乌龟	wwgw
 外国语	wwgy
-乌海	wwhd
 外汇	wwhd
 外海	wwhd
+乌海	wwhd
 外环	wwhg
 外号	wwhi
 外化	wwhj
@@ -129422,16 +129392,16 @@ Z	vyz
 文武之道	wwid
 外祖父	wwif
 蔚为壮观	wwig
-外族	wwih
 外资	wwih
+外族	wwih
 完完整整	wwii
 无妄之灾	wwii
+外传	wwij
 外债	wwij
 万物之灵	wwil
 外祖	wwil
 外祖母	wwim
 乌贼	wwio
-外罩	wwio
 外置	wwio
 外族人	wwir
 危重	wwit
@@ -129461,20 +129431,20 @@ Z	vyz
 外籍	wwjt
 五味俱全	wwju
 危境	wwju
-危及	wwjw
 危急	wwjw
+危及	wwjw
 外经	wwjx
 乌金	wwjy
-围魏救赵	wwjz
 外加	wwjz
+围魏救赵	wwjz
 丸	wwk
 外框	wwkc
 文物考古	wwkg
 丸	wwkk
 乌克兰	wwkl
 外裤	wwkl
-外寇	wwkn
 外快	wwkn
+外寇	wwkn
 外科	wwkt
 外壳	wwku
 外卡	wwky
@@ -129533,7 +129503,6 @@ Z	vyz
 外戚	wwqa
 外强	wwqb
 文武全才	wwqc
-务求	wwqf
 外勤	wwqf
 外企	wwqj
 外文期刊	wwqk
@@ -129594,7 +129563,6 @@ Z	vyz
 外戚	wwua
 外强	wwub
 文武全才	wwuc
-务求	wwuf
 外勤	wwuf
 外企	wwuj
 外文期刊	wwuk
@@ -129604,17 +129572,16 @@ Z	vyz
 外丘	wwur
 外切	wwus
 外迁	wwut
-万万千千	wwuu
-刎	wwuu
 外墙	wwuu
-外壳	wwuu
+刎	wwuu
 弯弯曲曲	wwuu
+万万千千	wwuu
 邬	wwv
 邬	wwvv
 外屋	wwwb
 万物为刍狗	wwwg
-勿忘	wwwh
 外文	wwwh
+勿忘	wwwh
 外侮	wwwj
 外围	wwwo
 望闻问切	wwwq
@@ -129631,13 +129598,12 @@ Z	vyz
 猥亵	wwxh
 危险期	wwxj
 危险品	wwxp
-务须	wwxq
 危险区	wwxq
 危险期	wwxq
-外乡人	wwxr
 外向	wwxr
 外星	wwxr
 外星人	wwxr
+外乡人	wwxr
 外姓	wwxs
 危险区	wwxu
 危险期	wwxu
@@ -129648,7 +129614,6 @@ Z	vyz
 歪歪斜斜	wwxx
 外销	wwxy
 乌有	wwya
-外有	wwya
 外引	wwyb
 外溢	wwyd
 丸药	wwye
@@ -129657,7 +129622,6 @@ Z	vyz
 外运	wwyg
 外衣	wwyh
 乌鸦嘴	wwyi
-外扬	wwyk
 外援	wwyk
 外语课	wwyk
 外语	wwyl
@@ -129685,16 +129649,17 @@ Z	vyz
 文武之道，一张一弛	wwzc
 外治	wwzd
 文武之道	wwzd
-乌枣	wwzf
 外祖父	wwzf
 蔚为壮观	wwzg
-外族	wwzh
 外资	wwzh
+外族	wwzh
+外传	wwzj
 外债	wwzj
 万物之灵	wwzl
 外祖	wwzl
 外祖母	wwzm
 乌贼	wwzo
+外置	wwzo
 外族人	wwzr
 危重	wwzt
 丸子	wwzv
@@ -129815,8 +129780,8 @@ Z	vyz
 维修厂	wxxc
 维系	wxxe
 维修工	wxxg
-毋需	wxxh
 维新	wxxh
+毋需	wxxh
 维修站	wxxi
 维修组	wxxi
 维修	wxxj
@@ -130194,8 +130159,8 @@ Z	vyz
 雄心	xaxl
 雄性	xaxn
 咸鸭蛋	xayd
-夏夜	xayh
 雄鹰	xayh
+夏夜	xayh
 夏邑	xayi
 夏衍	xayk
 硝烟	xaym
