--- a/rime/user.yaml
+++ b/rime/user.yaml
@@ -1,8 +1,9 @@
 var:
-  last_build_time: 1719773476
+  last_build_time: 1719778086
   previously_selected_schema: zzdyx_mod
   schema_access_time:
     xhup: 1719596156
-    zzdyx_mod: 1719773484
-    zzdyx_mop: 1719682420
+    zzdyx_mod: 1719778053
+    zzdyx_mop: 1719776713
+    zzdyx_perfect: 1719776725
     zzdyx_single: 1719764358
