--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -2,7 +2,7 @@
 # encoding:utf-8
 ---
 name: zzdyx_mod
-version: "20240627"
+version: "20240702"
 sort: by_weight
 use_preset_vocabulary: false
 columns:
@@ -90,8 +90,6 @@ CPU	cpu
 艾草	aece
 艾滋病	aeib
 艾滋	aeid
-艾炷	aeim
-艾卷	aejm
 艾灸	aejw
 阿尔及利亚	aejy
 蔼	ael
@@ -108,7 +106,6 @@ CPU	cpu
 艾叶	aeyi
 艾滋病	aezb
 艾滋	aezd
-艾炷	aezm
 鞍	af
 鞍部	afbh
 鞍钢	afgy
@@ -120,7 +117,6 @@ CPU	cpu
 鞍	afns
 安分守己	afsj
 鞍山	afso
-鞍前	afum
 鞍座	afzh
 鞍子	afzv
 熬	ag
@@ -210,7 +206,6 @@ CPU	cpu
 嗄	aiao
 嗄	aiaw
 安置补偿	aibc
-艾滋病毒	aibd
 呆	aic
 呆	aicc
 暗自得意	aidy
@@ -310,12 +305,10 @@ CPU	cpu
 挨批	akpk
 按期	akqf
 按时	aksr
-按上	aksy
 按天	aktg
 按期	akuf
 拗	akx
 按下	akxf
-按需	akxh
 拗	akxn
 拗	akxz
 按住	akzj
@@ -449,8 +442,8 @@ CPU	cpu
 安东尼	andn
 安迪	ando
 案牍	andr
-安德森	ands
 安顿	ands
+安德森	ands
 安达信	andx
 安放	anfh
 安抚	anfk
@@ -530,7 +523,6 @@ CPU	cpu
 安	ans
 懊丧	ansf
 安神	ansl
-安设	ansl
 安塞	ansn
 安睡	anso
 安身	ansr
@@ -554,8 +546,8 @@ CPU	cpu
 安委会	anwh
 安慰剂	anwj
 安稳	anwt
-傲睨万物	anww
 安危	anww
+傲睨万物	anww
 安溪	anxd
 安西	anxf
 安享	anxh
@@ -604,7 +596,6 @@ CPU	cpu
 盎	aoo
 盎	aood
 岸炮	aopm
-凹入	aorm
 黯然	aorv
 盎然	aorv
 黯然	aorw
@@ -676,7 +667,6 @@ CPU	cpu
 暗扣	arkk
 奥卡姆	arkm
 翱	arl
-奥林	arlc
 暗流	arld
 暗恋	arlh
 翱	arll
@@ -775,8 +765,8 @@ CPU	cpu
 唉声叹气	astu
 昂首挺胸	astx
 暗送秋波	asub
-奥斯威辛	aswx
 奥斯维辛	aswx
+奥斯威辛	aswx
 安史之乱	aszl
 矮	at
 氨	at
@@ -936,7 +926,6 @@ CPU	cpu
 铵盐	ayyu
 安知非福	azff
 爱憎分明	azfm
-暗中观察	azgc
 安之若素	azrs
 爱之深，恨之切	azsq
 爱之深，痛之切	azsq
@@ -3601,8 +3590,8 @@ CPU	cpu
 便于	bjyg
 不拘一格	bjyg
 冰肌玉骨	bjyg
-别具一格	bjyg
 波谲云诡	bjyg
+别具一格	bjyg
 便衣	bjyh
 伴音	bjyh
 便意	bjyh
@@ -4101,10 +4090,10 @@ bilibili	blbl
 百炼成钢	blcg
 补充	blch
 补偿	blcj
-不吝赐教	blcj
-半路出家	blcj
-补仓	blcj
 补偿金	blcj
+半路出家	blcj
+不吝赐教	blcj
+补仓	blcj
 被拆	blck
 补差	blcm
 被宠	blcn
@@ -9786,9 +9775,9 @@ bilibili	blbl
 传说	cjsl
 传输率	cjsl
 传送	cjsm
+阐释	cjsm
 传颂	cjsm
 常数	cjsm
-阐释	cjsm
 仇杀	cjsm
 常山	cjso
 从师	cjsp
@@ -14062,17 +14051,16 @@ bilibili	blbl
 大佬	dalj
 大陆架	dalj
 耷拉	dalk
-大咧咧	dall
 大礼	dall
 大料	dalm
 大力	daln
 大牢	daln
 大略	dalo
 大量	dalr
+大连	dals
 大理石	dals
 大力士	dals
 大力神	dals
-大连	dals
 达拉斯	dals
 大乱	dalt
 大陆	dalv
@@ -21528,8 +21516,8 @@ bilibili	blbl
 副伤寒	fdsh
 法商	fdsh
 副市长	fdsi
-副所长	fdsi
 副省长	fdsi
+副所长	fdsi
 副社长	fdsi
 法嗣	fdsi
 副书记	fdsj
@@ -22981,9 +22969,9 @@ bilibili	blbl
 分钟	fmiy
 分针	fmiy
 分之一	fmiy
-分局	fmjb
 分居	fmjb
 番剧	fmjb
+分局	fmjb
 翻建	fmjb
 分机	fmjc
 翻检	fmjc
@@ -23028,8 +23016,8 @@ bilibili	blbl
 翻脸	fmlv
 分馏	fmlw
 粉	fmm
-粉面	fmma
 翻面	fmma
+粉面	fmma
 分泌	fmmd
 父母恩	fmme
 父母官	fmmg
@@ -25138,12 +25126,10 @@ bilibili	blbl
 镄	fybo
 非比	fybs
 风雨不透	fybt
-非编	fybx
 妇幼保健院	fyby
 棐	fycc
 非常	fycj
 翡翠	fycl
-非传统	fyct
 富有成效	fycx
 非此	fycy
 非	fyd
@@ -25154,7 +25140,6 @@ bilibili	blbl
 非典	fydo
 非独	fydw
 奋勇当先	fydx
-非党员	fydy
 风雨大作	fydz
 蜂拥而至	fyei
 蜂拥而来	fyel
@@ -25165,43 +25150,33 @@ bilibili	blbl
 非份	fyfj
 非分	fyfm
 非凡	fyfw
-疯言疯语	fyfy
 翻云覆雨	fyfy
-覆雨翻云	fyfy
 附庸风雅	fyfy
 风言风语	fyfy
+疯言疯语	fyfy
+覆雨翻云	fyfy
 发扬光大	fygd
 放言高论	fygl
 非公	fygm
-防御功能	fygn
-防御工事	fygs
-非国有	fygy
 斐	fyh
 钫	fyhe
-非好汉	fyhh
 斐	fyhk
 斐	fyhm
 飞檐走壁	fyib
 非洲	fyid
-非正规	fyig
 非主流	fyil
 非洲人	fyir
 丰衣足食	fyis
 扶摇直上	fyis
 非正式	fyis
-非专业	fyiy
 风雨兼程	fyjc
 斐济	fyjd
-法医鉴定	fyjd
 风云际会	fyjh
 佛要金装	fyji
 风雨交加	fyjj
 复员军人	fyjr
 非金属	fyjs
-非经	fyjx
 佛要金装	fyjz
-放眼看去	fykq
-放眼看去	fyku
 翡	fyl
 非淋	fyld
 幅员辽阔	fylk
@@ -25213,7 +25188,6 @@ bilibili	blbl
 锋芒	fyme
 非命	fymj
 非卖品	fymp
-富有内涵	fynh
 非难	fynl
 蜚	fyo
 蜚	fyok
@@ -26462,7 +26436,7 @@ bilibili	blbl
 功德	gfdk
 攻打	gfdk
 攻读	gfdl
-哥德曼	gfdm
+歌单	gfdm
 过道	gfdm
 高分低能	gfdn
 古典	gfdo
@@ -26943,9 +26917,7 @@ bilibili	blbl
 干电池	ggdc
 孤孤单单	ggdd
 归根到底	ggdd
-疙疙瘩瘩	ggdd
 高高低低	ggdd
-高高大大	ggdd
 干豆腐	ggdf
 干掉	ggdk
 勾股定理	ggdl
@@ -28041,6 +28013,7 @@ bilibili	blbl
 拐	gki
 挂在	gkia
 拐杖	gkic
+挂载	gkif
 拐枣	gkif
 挂职	gkif
 挂住	gkij
@@ -28158,8 +28131,9 @@ bilibili	blbl
 挂羊头	gkyt
 挂在	gkza
 拐杖	gkzc
-拐枣	gkzf
+挂载	gkzf
 挂职	gkzf
+拐枣	gkzf
 挂住	gkzj
 管窥之见	gkzj
 挂着	gkzm
@@ -34208,8 +34182,8 @@ GPRS	gprs
 恨	hnb
 恨不	hnba
 海纳百川	hnbc
-好男不和女斗	hnbd
 恨不得	hnbd
+好男不和女斗	hnbd
 海纳百川，有容乃大	hnbd
 怀表	hnbg
 寒冰	hnbh
@@ -34463,19 +34437,18 @@ GPRS	gprs
 黑板擦	hobc
 回波	hobd
 回本	hobf
+黑帮	hobg
 黑斑	hobg
-回禀	hobh
 患病	hobh
+回禀	hobh
 回报	hobk
-回不来	hobl
 回报率	hobl
+回不来	hobl
 黑豹	hobm
 黑白片	hobp
 回不去	hobq
 黑白	hobr
-回报率	hobs
 黑宝石	hobs
-黑板上	hobs
 回不去	hobu
 回厂	hoca
 回村	hocc
@@ -37950,7 +37923,11 @@ GPRS	gprs
 直追	ifir
 直至	ifis
 造福子孙	ifis
+载重	ifit
 栽种	ifit
+真知	ifit
+再造	ifit
+政制	ifit
 直走	ifiu
 枣子	ifiv
 政局	ifjb
@@ -38298,11 +38275,11 @@ GPRS	gprs
 再转	ifzs
 直至	ifzs
 造福子孙	ifzs
-再造	ifzt
-政制	ifzt
+载重	ifzt
 栽种	ifzt
 真知	ifzt
-载重	ifzt
+再造	ifzt
+政制	ifzt
 直走	ifzu
 枣子	ifzv
 照方抓药	ifzy
@@ -38563,16 +38540,12 @@ GPRS	gprs
 专业版	igyb
 专一	igyd
 专营店	igyd
-中国移动	igyd
-主观臆断	igyd
 忠肝义胆	igyd
 专营	igye
 珠玉	igyg
 专业化	igyh
-专业户	igyh
-中国银行	igyh
-直挂云帆济沧海	igyh
 赘言	igyh
+直挂云帆济沧海	igyh
 专员	igyi
 专业级	igyj
 专业课	igyk
@@ -39254,9 +39227,8 @@ GPRS	gprs
 再造之恩	iiie
 咋整	iiif
 只准	iiih
-在这之后	iiih
-踯躅	iiii
 咂嘴	iiii
+踯躅	iiii
 自作主张	iiii
 重中之重	iiii
 浊者自浊	iiii
@@ -39272,7 +39244,6 @@ GPRS	gprs
 执子之手	iiis
 自作自受	iiis
 只知	iiit
-战争状态	iiit
 自主知识产权	iiiu
 种子植物	iiiw
 只争朝夕	iiix
@@ -39661,10 +39632,10 @@ GPRS	gprs
 准静止锋	ijif
 债转股	ijig
 债主	ijih
+作主	ijih
 做主	ijih
 坐姿	ijih
 坐庄	ijih
-作主	ijih
 住嘴	ijii
 伫足	ijii
 自给自足	ijii
@@ -40088,12 +40059,14 @@ GPRS	gprs
 抓走	ikiu
 糟糠之妻	ikiu
 折子	ikiv
-折子戏	ikix
 折纸	ikix
-专款专用	ikiy
-指战员	ikiy
-指针	ikiy
+折子戏	ikix
 捉	ikiy
+指针	ikiy
+扎针	ikiy
+撞针	ikiy
+指战员	ikiy
+专款专用	ikiy
 征召	ikiz
 蛰居	ikjb
 拙荆	ikje
@@ -41570,13 +41543,18 @@ GPRS	gprs
 中专生	iois
 中转	iois
 助长	ioit
+中子	ioiv
 助阵	ioiv
+崽子	ioiv
+贼子	ioiv
 蜘蛛网	ioiw
 中轴线	ioix
 蜘蛛侠	ioix
 中止	ioiy
 中州韵	ioiy
-中转站	ioiz
+忠贞	ioiy
+眨眨眼	ioiy
+助战	ioiy
 畛	ioj
 忠君	iojb
 中间层	iojc
@@ -41860,7 +41838,6 @@ GPRS	gprs
 罪责	iozg
 中资	iozh
 罪状	iozh
-中转站	iozi
 赚足	iozi
 帧中继	iozj
 罩住	iozj
@@ -41877,31 +41854,16 @@ GPRS	gprs
 中转	iozs
 中轴	iozs
 助长	iozt
-中子	iozv
-助阵	iozv
-崽子	iozv
-罩子	iozv
-贼子	iozv
 蜘蛛网	iozw
 中轴线	iozx
 蜘蛛侠	iozx
-中州韵	iozy
-中止	iozy
-助战	iozy
-忠贞	iozy
-眨眨眼	iozy
-中转站	iozz
 助	iozz
 真皮组织	ipii
-这篇课文	ipkw
 众叛亲离	ipql
-这篇日记	iprj
-这片热土	iprt
 臧否人物	iprw
 真凭实据	ipsj
 诈骗团伙	ipth
 众叛亲离	ipul
-这篇文章	ipwi
 中篇小说	ipxs
 真皮组织	ipzi
 质	iq
@@ -42180,9 +42142,9 @@ GPRS	gprs
 自治州	irii
 追踪	irii
 自传	irij
-自住	irij
 自制剧	irij
 追债	irij
+自住	irij
 重任在肩	irij
 自找	irik
 自尊	irim
@@ -42371,7 +42333,6 @@ GPRS	gprs
 致人死亡	irsw
 早上	irsy
 自适应	irsy
-追上	irsy
 峥嵘岁月	irsy
 知人善用	irsy
 昨	irt
@@ -42475,11 +42436,6 @@ GPRS	gprs
 自缢	iryx
 早孕	iryz
 昭	irz
-早在	irza
-最左	irza
-照在	irza
-自在	irza
-追逐	irza
 自助餐	irzc
 自治	irzd
 追涨	irzd
@@ -42497,11 +42453,6 @@ GPRS	gprs
 自治州	irzi
 自足	irzi
 追踪	irzi
-自传	irzj
-自住	irzj
-责人之心责己	irzj
-追债	irzj
-重任在肩	irzj
 自找	irzk
 自尊	irzm
 自助	irzo
@@ -42669,8 +42620,10 @@ GPRS	gprs
 转自	isir
 辗转	isis
 姊姊	isis
-只手遮天	isit
 辎重	isit
+转租	isit
+只手遮天	isit
+转制	isit
 早睡早起	isiu
 转子	isiv
 再生障碍性贫血	isix
@@ -42939,11 +42892,6 @@ GPRS	gprs
 臻至	iszs
 转轴	iszs
 辗转	iszs
-只手遮天	iszt
-轧制	iszt
-转制	iszt
-转租	iszt
-辎重	iszt
 早睡早起	iszu
 转子	iszv
 再生障碍性贫血	iszx
@@ -42968,11 +42916,10 @@ GPRS	gprs
 知本家	itbj
 知彼	itbk
 筑宾	itbn
-重兵	itbr
-制版	itbr
 竹帛	itbr
-自叹不如	itbr
+制版	itbr
 遮天蔽日	itbr
+自叹不如	itbr
 筑坝	itbu
 长膘	itbv
 制备	itbw
@@ -103487,8 +103434,8 @@ QQ密码	qqmm
 气焰嚣张	qyxz
 歧异	qyyb
 青眼有加	qyyj
-取悦于民	qyym
 歧义	qyym
+取悦于民	qyym
 钱眼	qyyo
 其言也善	qyys
 区域优势	qyys
@@ -124379,8 +124326,8 @@ QQ密码	uumm
 气焰嚣张	uyxz
 歧异	uyyb
 青眼有加	uyyj
-取悦于民	uyym
 歧义	uyym
+取悦于民	uyym
 钱眼	uyyo
 其言也善	uyys
 区域优势	uyys
@@ -135208,26 +135155,25 @@ Z	vyz
 乡级	xxjx
 细菌学	xxjx
 细菌战	xxjz
-心胸开阔	xxkk
 线控	xxkk
-细看	xxkk
 辛辛苦苦	xxkk
+心胸开阔	xxkk
 选修科目	xxkm
 线路板	xxlb
 心血来潮	xxlc
 绚丽	xxld
 细流	xxld
 巡逻队	xxld
-熊熊烈火	xxlh
 驯鹿	xxlh
+熊熊烈火	xxlh
 线路	xxli
 乡邻	xxlj
-巡礼	xxll
 绪论	xxll
+巡礼	xxll
+稀稀落落	xxll
 驯良	xxll
 淅淅沥沥	xxll
 稀稀拉拉	xxll
-稀稀落落	xxll
 绚烂	xxlm
 巡逻	xxlo
 消息灵通人士	xxls
@@ -141888,8 +141834,8 @@ Z	vyz
 劓	yru
 延期	yruf
 邀请函	yruh
-一日千里	yrul
 邀请	yrul
+一日千里	yrul
 舆情	yrun
 粤曲	yruo
 邀请赛	yrus
@@ -142102,8 +142048,8 @@ Z	vyz
 姨丈	ysia
 原生质层	ysic
 医治	ysid
-养生之道	ysid
 怨声载道	ysid
+养生之道	ysid
 欲速则不达	ysid
 吟诗作对	ysid
 彧	ysid
@@ -142489,6 +142435,7 @@ Z	vyz
 夭折	ytik
 筼	ytio
 移至	ytis
+移种	ytit
 一拖再拖	ytit
 移走	ytiu
 晕头转向	ytix
@@ -142590,6 +142537,7 @@ Z	vyz
 移栽	ytzf
 夭折	ytzk
 移至	ytzs
+移种	ytzt
 一拖再拖	ytzt
 移走	ytzu
 晕头转向	ytzx
@@ -146397,8 +146345,6 @@ Z	vyz
 专业版	zgyb
 专一	zgyd
 专营店	zgyd
-中国移动	zgyd
-主观臆断	zgyd
 忠肝义胆	zgyd
 专营	zgye
 珠玉	zgyg
@@ -147589,9 +147535,9 @@ Z	vyz
 债转股	zjzg
 债主	zjzh
 做主	zjzh
+作主	zjzh
 坐姿	zjzh
 坐庄	zjzh
-作主	zjzh
 住嘴	zjzi
 做作	zjzj
 住宅楼	zjzl
@@ -147787,11 +147733,10 @@ Z	vyz
 折子	zkiv
 折子戏	zkix
 折纸	zkix
-指针	zkiy
 捉	zkiy
-征战	zkiy
+指针	zkiy
 撞针	zkiy
-专款专用	zkiy
+征战	zkiy
 扎针	zkiy
 指战员	zkiy
 征召	zkiz
@@ -149253,7 +149198,6 @@ Z	vyz
 罪责	zoig
 中资	zoih
 罪状	zoih
-中转站	zoii
 曱	zoii
 赚足	zoii
 帧中继	zoij
@@ -149272,20 +149216,9 @@ Z	vyz
 中转	zois
 中轴	zois
 助长	zoit
-中子	zoiv
-助阵	zoiv
-崽子	zoiv
-罩子	zoiv
-贼子	zoiv
 蜘蛛网	zoiw
 中轴线	zoix
 蜘蛛侠	zoix
-中州韵	zoiy
-中止	zoiy
-助战	zoiy
-忠贞	zoiy
-眨眨眼	zoiy
-中转站	zoiz
 畛	zoj
 忠君	zojb
 中间层	zojc
@@ -149564,10 +149497,12 @@ Z	vyz
 中正	zozf
 罪责	zozg
 罪状	zozh
-中转站	zozi
 赚足	zozi
-帧中继	zozj
-罩住	zozj
+自传	zrzj
+自制剧	zrzj
+追债	zrzj
+自住	zrzj
+重任在肩	zrzj
 中指	zozk
 罪证	zozl
 睁着	zozm
@@ -149576,25 +149511,25 @@ Z	vyz
 中专生	zozs
 中转	zozs
 助长	zozt
+中子	zozv
 助阵	zozv
+崽子	zozv
+贼子	zozv
 蜘蛛网	zozw
 中轴线	zozx
 蜘蛛侠	zozx
-中州韵	zozy
 中止	zozy
-助战	zozy
+中州韵	zozy
+忠贞	zozy
 眨眨眼	zozy
+助战	zozy
 中转站	zozz
 真皮组织	zpii
-这篇课文	zpkw
 众叛亲离	zpql
-这篇日记	zprj
-这片热土	zprt
 臧否人物	zprw
 真凭实据	zpsj
 诈骗团伙	zpth
 众叛亲离	zpul
-这篇文章	zpwz
 中篇小说	zpxs
 真皮组织	zpzz
 质	zq
@@ -149859,11 +149794,6 @@ Z	vyz
 载人航天	zrht
 最坏	zrhu
 自画像	zrhx
-早在	zria
-最左	zria
-照在	zria
-自在	zria
-追逐	zria
 自助餐	zric
 自治	zrid
 追涨	zrid
@@ -149880,11 +149810,6 @@ Z	vyz
 自治州	zrii
 自足	zrii
 追踪	zrii
-自传	zrij
-自住	zrij
-责人之心责己	zrij
-追债	zrij
-重任在肩	zrij
 自找	zrik
 自尊	zrim
 自助	zrio
@@ -150075,7 +150000,6 @@ Z	vyz
 致人死亡	zrsw
 早上	zrsy
 自适应	zrsy
-追上	zrsy
 峥嵘岁月	zrsy
 知人善用	zrsy
 追随者	zrsz
@@ -150364,11 +150288,6 @@ Z	vyz
 臻至	zsis
 转轴	zsis
 辗转	zsis
-只手遮天	zsit
-轧制	zsit
-转制	zsit
-转租	zsit
-辎重	zsit
 早睡早起	zsiu
 转子	zsiv
 再生障碍性贫血	zsix
@@ -150633,8 +150552,10 @@ Z	vyz
 转自	zszr
 辗转	zszs
 姊姊	zszs
-只手遮天	zszt
 辎重	zszt
+转租	zszt
+只手遮天	zszt
+转制	zszt
 早睡早起	zszu
 转子	zszv
 再生障碍性贫血	zszx
@@ -150661,11 +150582,10 @@ Z	vyz
 知本家	ztbj
 知彼	ztbk
 筑宾	ztbn
-重兵	ztbr
-制版	ztbr
 竹帛	ztbr
-自叹不如	ztbr
+制版	ztbr
 遮天蔽日	ztbr
+自叹不如	ztbr
 筑坝	ztbu
 长膘	ztbv
 制备	ztbw
