20240703-000438：补充skbw→skpd的词条，加当天、嗝屁、文青、偏偏。

--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -1649,8 +1649,8 @@ CPU	cpu
 百倍	bdbj
 宝刀不老	bdbl
 抱打不平	bdbp
-病得不轻	bdbq
 百毒不侵	bdbq
+病得不轻	bdbq
 百般	bdbq
 不多不少	bdbs
 不打不相识	bdbs
@@ -16273,9 +16273,9 @@ bilibili	blbl
 倒退	djtb
 地久天长	djtc
 当涂	djtd
+当天	djtg
 代替	djtg
 低碳钢	djtg
-当天	djtg
 当庭	djth
 当堂	djtj
 当推	djtk
@@ -27565,6 +27565,7 @@ bilibili	blbl
 孤枕难眠	ginm
 呙	gio
 呙	giok
+嗝屁	gipb
 跟屁虫	gipc
 跟拍	gipk
 呱	giq
@@ -96524,6 +96525,7 @@ GPRS	gprs
 俜	pjos
 凭票	pjpf
 偏旁	pjph
+偏偏	pjpj
 偏僻	pjpj
 偏颇	pjpn
 偏颇	pjpz
@@ -109217,6 +109219,204 @@ QQ密码	qqmm
 手把手	skbs
 手笔	skbt
 手包	skbw
+时刻不忘  skbw
+手背  skby
+手边  skbz
+势成  skca
+手抄本  skcb
+搜查  skcc
+手冲  skch
+搜查证  skci
+擅闯  skcj
+撕扯  skck
+手抄  skck
+手持  skck
+誓词  skcl
+搜查令  skcl
+手戳  skcl
+手串  skco
+擅长  skct
+扫除  skcv
+手册  skcw
+拾柴  skcy
+时空穿越  skcy
+搜查证  skcz
+势大  skda
+手动挡  skdd
+斯堪的纳维亚半岛  skdd
+扫荡  skde
+捎带  skdf
+手动  skdg
+时刻都在  skdi
+摔倒  skdj
+摔打  skdk
+撕掉  skdk
+拾掇  skdk
+摔断  skdm
+手电  skdo
+手段  skdr
+撒旦  skdr
+拾到  skds
+搜到  skds
+手电筒  skdt
+扫地  skdu
+斯堪的纳维亚  skdy
+时刻都在  skdz
+适可而止  skei
+适可而止  skez
+撕  skf
+揲  skfc
+手法  skfd
+蛇口蜂针  skfi
+手扶  skfk
+摄  skfl
+授粉  skfm
+抒发  skfn
+手风琴  skfq
+矢口否认  skfr
+深刻反思  skfs
+撒  skft
+手风琴  skfu
+搜风  skfw
+拴缚  skfx
+抒发  skfz
+蛇口蜂针  skfz
+手感  skga
+擅改  skgb
+手工  skgf
+拭干  skgg
+撒狗粮  skgl
+手骨  skgo
+手稿  skgt
+搜刮  skgt
+摔跟头  skgt
+势孤  skgv
+搜狗  skgw
+授给  skgx
+手工艺  skgy
+摔  skh
+拾荒  skhe
+撒欢儿  skhe
+扫黄  skhf
+手环  skhg
+损耗  skhg
+誓  skhi
+撒谎  skhl
+撒欢  skhl
+撒哈拉  skhl
+损害  skhn
+手黑  skho
+撕毁  skhr
+损毁  skhr
+擅  skhr
+损坏  skhu
+搜狐  skhw
+手绘  skhx
+损  ski
+拴在  skia
+实况转播  skib
+扫帚  skib
+手札  skic
+摄政  skif
+逝者  skif
+手抓饭  skif
+生克制化  skih
+手足  skii
+摄制组  skii
+书刊杂志  skii
+手掌  skij
+手指  skik
+手诊  skil
+拴着  skim
+手中  skio
+擅自  skir
+手指头  skit
+摄制  skit
+摄政王  skiw
+手纸  skix
+扫帚星  skix
+手镯  skiy
+拾  skj
+手机  skjc
+搜救  skjf
+撒酒疯  skjf
+司空见惯  skjg
+拴  skjg
+手机号  skjh
+授奖  skjh
+授课计划  skjh
+摔跤  skji
+搜集  skjj
+手机卡  skjk
+手机壳  skjk
+授精  skjm
+手举  skjn
+手巾  skjo
+撒娇  skjs
+手紧  skju
+手脚  skjv
+捎  skjv
+抒解  skjw
+手绢  skjx
+搜缴  skjx
+拾锦  skjy
+手  skk
+撕开  skkg
+手控  skkk
+授课  skkl
+盛况空前  skkq
+盛况空前  skku
+撒克逊  skkx
+手铐  skky
+搔  skl
+撕裂  skla
+摄录  sklb
+搡  sklc
+手榴弹  skld
+撒落  skle
+捎来  sklh
+抒  skli
+什克洛夫斯基  sklj
+手令  sklj
+手拉  sklk
+搧  skll
+撕烂  sklm
+势力  skln
+手里  sklo
+搜罗  sklo
+手拉手  skls
+势利  sklt
+扫雷艇  sklt
+抒  sklv
+势利眼  skly
+手链  skly
+势力  sklz
+授  skm
+扫码  skma
+手模  skmc
+撒满  skmd
+扫墓  skme
+扫盲  skmh
+授命  skmj
+扫描  skmk
+授  skml
+手慢  skmn
+掸  skmo
+扫描器  skmq
+擞  skmt
+扫描器  skmu
+搠  skmv
+拴马  skmx
+扫描仪  skmy
+势  skn
+撒尿  sknb
+手拿  sknj
+手捏  sknk
+势能  sknl
+逝  sknn
+摄纳  sknx
+撕破  skpa
+时刻陪伴  skpb
 撒泼	skpd
 撕票	skpf
 扫平	skph
@@ -126156,6 +126356,7 @@ Z	vyz
 文凭	whpj
 渭河平原	whpy
 妄求	whqf
+文青	whqg
 忘情	whqn
 弯曲	whqo
 亡妻	whqs
@@ -126199,6 +126400,7 @@ Z	vyz
 文坛	whtu
 文天祥	whtx
 妄求	whuf
+文青	whug
 忘情	whun
 弯曲	whuo
 亡妻	whus
