--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -1642,35 +1642,27 @@ CPU	cpu
 标志性	bczx
 百	bd
 滨	bd
-被动挨打	bdad
 不打锛儿	bdbe
 波霸	bdbh
-不当不正	bdbi
 百倍	bdbj
 宝刀不老	bdbl
 抱打不平	bdbp
 百毒不侵	bdbq
-病得不轻	bdbq
-百般	bdbq
 不多不少	bdbs
 不打不相识	bdbs
 百八十	bdbs
 棒打不回头	bdbt
-病得不轻	bdbu
 百毒不侵	bdbu
 百宝箱	bdbx
 百读不厌	bdby
 不当不正	bdbz
-逼成	bdca
 百草	bdce
 不到长城非好汉	bdch
 泊船	bdcq
-百川	bdcr
 泊车	bdcs
-波茨坦	bdct
 波长	bdct
+波茨坦	bdct
 滨城	bdcu
-逼出	bdcv
 波导	bddb
 不定代词	bddc
 波动	bddg
@@ -1679,8 +1671,6 @@ CPU	cpu
 逼得	bddk
 波段	bddr
 皕	bddr
-逼到	bdds
-不单单是	bdds
 不登大雅之堂	bddt
 百多	bddw
 不登大雅	bddy
@@ -1696,8 +1686,8 @@ CPU	cpu
 百分比	bdfb
 百分百	bdfb
 百分点	bdfd
-标点符号	bdfh
 百分号	bdfh
+标点符号	bdfh
 百分之	bdfi
 百分制	bdfi
 百分率	bdfl
@@ -1715,8 +1705,6 @@ CPU	cpu
 波谷	bdgm
 逼宫	bdgn
 百果	bdgo
-百舸	bdgq
-病毒感染	bdgr
 毕达哥拉斯	bdgs
 汴	bdh
 渤海	bdhd
@@ -1724,15 +1712,15 @@ CPU	cpu
 百花	bdhe
 灞	bdhf
 百合花	bdhh
-百合	bdhj
 百花奖	bdhj
 百货	bdhj
+百合	bdhj
 汴	bdhk
 百户	bdhl
 瀌	bdhm
 波黑	bdho
-不到黄河心不死	bdhs
 逼婚	bdhs
+不到黄河心不死	bdhs
 逼和	bdht
 渤海湾	bdhw
 不到黄河不死心	bdhx
@@ -1742,14 +1730,11 @@ CPU	cpu
 逼真	bdif
 波状	bdih
 不打自招	bdii
-白刀子进	bdij
 逼债	bdij
+白刀子进	bdij
 波折	bdik
 滨州	bdim
-百字	bdin
 百褶裙	bdiq
-百种	bdit
-逼走	bdiu
 百褶裙	bdiu
 百战	bdiy
 滨江	bdjd
@@ -1770,19 +1755,18 @@ CPU	cpu
 泌	bdl
 百灵	bdlb
 波浪	bdld
-汴梁	bdld
 波澜	bdld
+汴梁	bdld
 百两	bdlf
 布达拉宫	bdlg
 波多黎各	bdlg
 百老汇	bdlh
 本地连接	bdlj
 泌	bdlk
-波兰	bdlm
 波罗蜜	bdlm
+波兰	bdlm
 百灵鸟	bdln
 百里	bdlo
-被代理人	bdlr
 弊多利少	bdls
 濒临	bdlu
 波浪线	bdlx
@@ -1806,8 +1790,6 @@ CPU	cpu
 百篇	bdpt
 百强	bdqb
 灞桥	bdqc
-逼其	bdqf
-逼抢	bdqk
 不得其门而入	bdqr
 北斗七星	bdqx
 泊	bdr
@@ -1838,24 +1820,17 @@ CPU	cpu
 波斯湾	bdsw
 百色	bdsw
 沘	bdsw
-逼上	bdsy
 不得善终	bdsz
 滗	bdt
-百态	bdta
 逼退	bdtb
 波涛	bdtd
 百天	bdtg
 波特率	bdtl
 波特兰	bdtl
-泊头	bdtn
 波特	bdtt
-宝岛台湾	bdtw
 包打天下	bdtx
-不大同意	bdty
 百强	bdub
 灞桥	bduc
-逼其	bduf
-逼抢	bduk
 不得其门而入	bdur
 北斗七星	bdux
 逼问	bdwj
@@ -1869,7 +1844,6 @@ CPU	cpu
 北大西洋公约组织	bdxi
 拔刀相助	bdxi
 百姓家	bdxj
-百戏	bdxl
 百姓	bdxs
 波形图	bdxt
 不端行为	bdxw
@@ -1897,13 +1871,11 @@ CPU	cpu
 不懂装懂	bdzd
 逼真	bdzf
 波状	bdzh
-白刀子进	bdzj
 逼债	bdzj
+白刀子进	bdzj
 波折	bdzk
 滨州	bdzm
-百字	bdzn
 百褶裙	bdzq
-逼走	bdzu
 百褶裙	bdzu
 百战	bdzy
 不打自招	bdzz
@@ -1935,8 +1907,6 @@ CPU	cpu
 薄待	bedk
 巴尔的摩	bedm
 菠	bedn
-薄的	bedr
-薄地	bedu
 菠	bedz
 苯	bef
 苯	befd
@@ -1949,7 +1919,6 @@ CPU	cpu
 苄	beh
 薄厚	beha
 薄荷	behe
-薄黄	behf
 苯环	behg
 蒡	behh
 苄	behj
@@ -1986,7 +1955,6 @@ CPU	cpu
 菠萝蜜	belm
 萹	belo
 白俄罗斯	bels
-奔儿楼头	belt
 薄利	belt
 芭蕾舞	belw
 蔽	bem
@@ -2009,7 +1977,6 @@ CPU	cpu
 萆	ber
 薄弱	berb
 萆	berf
-蔽日	berr
 蓖	bers
 薄绒	berx
 芘	bes
@@ -2044,7 +2011,6 @@ CPU	cpu
 博爱	bfam
 本案	bfan
 丙氨酸	bfas
-本不	bfba
 不分彼此	bfbc
 靶标	bfbc
 边防部队	bfbd
@@ -2067,7 +2033,6 @@ CPU	cpu
 不分场合	bfch
 不费吹灰之力	bfcl
 博彩	bfcm
-博采	bfcm
 不负此生	bfcs
 鞭策	bfct
 鞭笞	bfct
@@ -2089,22 +2054,16 @@ CPU	cpu
 百废待兴	bfdx
 靶点	bfdy
 博尔顿	bfed
-本恶	bfef
-本儿	bfew
 博	bff
 博	bfff
 不法分子	bffi
 本分	bffm
 鬓发	bffn
-勃发	bffn
 鞴	bffo
-北方方言	bffy
 不法分子	bffz
-勃发	bffz
 鬓发	bffz
 本港	bfgd
 博古	bfgf
-播放工具	bfgj
 本该	bfgl
 本关	bfgm
 本官	bfgn
@@ -2117,19 +2076,15 @@ CPU	cpu
 本会	bfhj
 本行	bfhk
 丙火	bfhm
-本合同	bfht
 八方呼应	bfhy
 百分之百	bfib
 贲张	bfib
 本职	bfif
 本站	bfih
 北伐战争	bfii
-本专科	bfik
 本证	bfil
 本尊	bfim
-本周内	bfin
 本质	bfiq
-本质上	bfis
 不法之徒	bfit
 靶子	bfiv
 鞭子	bfiv
@@ -2146,7 +2101,6 @@ CPU	cpu
 鞭	bfjf
 本就	bfjh
 悲愤交加	bfjj
-步伐加快	bfjk
 本杰明	bfjm
 本家	bfjn
 靶舰	bfjq
@@ -2173,7 +2127,6 @@ CPU	cpu
 本领	bflj
 兵分两路	bfll
 本垒	bfll
-本论	bfll
 本类	bflm
 勃朗宁	bfln
 博罗	bflo
@@ -2195,7 +2148,6 @@ CPU	cpu
 不分南北	bfnb
 本年度	bfnd
 本能	bfnl
-不分年龄	bfnl
 鞁	bfnl
 逋	bfnn
 鬓	bfnr
@@ -2203,7 +2155,6 @@ CPU	cpu
 贲	bfo
 贲	bfoj
 贲	bfok
-并非偶然	bfor
 本派	bfpd
 本票	bfpf
 本品	bfpi
@@ -2215,8 +2166,6 @@ CPU	cpu
 不分青红皂白	bfqb
 髟	bfqe
 博取	bfqf
-不乏其例	bfql
-不乏其人	bfqr
 勃起	bfqu
 本钱	bfqy
 本人	bfrj
@@ -2235,7 +2184,6 @@ CPU	cpu
 本所	bfsq
 本身	bfsr
 博士生	bfss
-不服水土	bfst
 博士	bfsu
 本色	bfsw
 不分上下	bfsx
@@ -2256,9 +2204,7 @@ CPU	cpu
 本群	bfub
 不分青红皂白	bfub
 博取	bfuf
-不乏其例	bful
 醭	bfum
-不乏其人	bfur
 勃起	bfuu
 本钱	bfuy
 靶	bfv
@@ -2270,25 +2216,21 @@ CPU	cpu
 鹁	bfwd
 博物馆	bfwg
 博文	bfwh
-本网站	bfwi
 本位	bfwj
 丙烷	bfwm
 博物	bfwt
 变法维新	bfwx
 博物院	bfwy
-本网站	bfwz
 丙戌	bfxa
 靶细胞	bfxb
 本想	bfxc
 本溪	bfxd
 本系	bfxe
-本学科	bfxk
 本心	bfxl
 靶心	bfxl
 丙烯	bfxm
 本性	bfxn
 博学	bfxn
-本学期	bfxq
 本息	bfxr
 靶向	bfxr
 丙烯酸	bfxs
@@ -2307,9 +2249,6 @@ CPU	cpu
 博弈论	bfyl
 本义	bfym
 丙寅	bfyn
-播放影片	bfyp
-本影	bfyr
-被抚养人	bfyr
 不妨一试	bfys
 博雅	bfys
 并非易事	bfys
@@ -2325,7 +2264,6 @@ CPU	cpu
 贲张	bfzb
 本职	bfzf
 本站	bfzh
-本专科	bfzk
 本证	bfzl
 鞁	bfzl
 本尊	bfzm
@@ -2362,12 +2300,9 @@ CPU	cpu
 斑白	bgbr
 秉公办事	bgbs
 斑驳	bgbx
-边干边学	bgbx
-八纲辨证	bgbz
 帮办	bgbz
 表层	bgcb
 碧草	bgce
-宝贵财富	bgcf
 班次	bgch
 不改初衷	bgci
 帮衬	bgcl
@@ -2428,7 +2363,6 @@ CPU	cpu
 表侄	bgij
 表征	bgik
 百舸争流	bgil
-帮着	bgim
 表字	bgin
 帮助	bgio
 不攻自破	bgip
@@ -2454,7 +2388,6 @@ CPU	cpu
 表决权	bgju
 斑鸠	bgjw
 班级	bgjx
-宾馆客房	bgkf
 碧空	bgkn
 帮困	bgko
 班科任	bgkr
@@ -2512,7 +2445,6 @@ CPU	cpu
 表亲	bgqh
 斑丘疹	bgqi
 表情	bgqn
-倍感亲切	bgqq
 表壳	bgqu
 帮腔	bgqv
 卑躬屈膝	bgqx
@@ -2520,7 +2452,6 @@ CPU	cpu
 帮人	bgrj
 表热	bgrk
 表述	bgsc
-变革时代	bgsd
 碧水	bgsd
 表示	bgsg
 闭关锁国	bgsg
@@ -2549,7 +2480,6 @@ CPU	cpu
 表亲	bguh
 斑丘疹	bgui
 表情	bgun
-倍感亲切	bguu
 表壳	bguu
 帮腔	bguv
 卑躬屈膝	bgux
@@ -2585,7 +2515,6 @@ CPU	cpu
 碧云	bgyg
 表意	bgyh
 表演者	bgyi
-宝贵意见	bgyj
 帮佣	bgyj
 表扬	bgyk
 表语	bgyl
@@ -2603,7 +2532,6 @@ CPU	cpu
 表侄	bgzj
 表征	bgzk
 百舸争流	bgzl
-帮着	bgzm
 表字	bgzn
 帮助	bgzo
 不攻自破	bgzp
@@ -2683,11 +2611,9 @@ CPU	cpu
 病	bhfk
 病房	bhfl
 部分	bhfm
-部发	bhfn
 禀赋	bhfo
 冰封	bhfu
 霸	bhfv
-部发	bhfz
 斌	bhg
 冰柜	bhgc
 冰棍	bhgc
@@ -2780,7 +2706,6 @@ CPU	cpu
 变	bhl
 病历	bhla
 冰棱	bhlc
-变流	bhld
 部落	bhle
 变老	bhlf
 病理	bhlg
@@ -2791,8 +2716,6 @@ CPU	cpu
 冰溜子	bhli
 病例	bhlj
 辩论	bhll
-部类	bhlm
-部里	bhlo
 变流器	bhlq
 变量	bhlr
 辩论赛	bhls
@@ -2874,11 +2797,9 @@ CPU	cpu
 变少	bhsp
 变速器	bhsq
 变身	bhsr
-变坏事为好事	bhss
 变速器	bhsu
 变色	bhsw
 庇	bhsw
-拨号上网	bhsw
 变速箱	bhsx
 不合时宜	bhsy
 亳	bht
@@ -2929,8 +2850,8 @@ CPU	cpu
 变相	bhxc
 辨析	bhxc
 冰消	bhxd
-变戏法	bhxf
 部下	bhxf
+变戏法	bhxf
 变形	bhxg
 冰雪	bhxh
 变心	bhxl
@@ -2950,12 +2871,12 @@ CPU	cpu
 庇荫	bhye
 冰雨	bhyf
 变音	bhyh
+病秧子	bhyi
 变异株	bhyi
 病员	bhyi
-病秧子	bhyi
 庇佑	bhyj
-病原菌	bhyj
 病愈	bhyj
+病原菌	bhyj
 褒扬	bhyk
 褒义	bhym
 病因	bhyo
@@ -2990,10 +2911,10 @@ CPU	cpu
 病志	bhzu
 辫子	bhzv
 雹子	bhzv
+霸占	bhzy
 冰镇	bhzy
 变质岩	bhzy
 百花争艳	bhzy
-霸占	bhzy
 吧	bi
 吧？	bi
 别	bi
@@ -3013,11 +2934,10 @@ CPU	cpu
 不早不晚	bibw
 不忠不孝	bibx
 半遮半掩	biby
+蹦床	bich
 扮猪吃老虎	bich
 扮猪吃虎	bich
-蹦床	bich
 不在此列	bicl
-包装材料	bicl
 蹦出	bicv
 啵	bid
 别动队	bidd
@@ -3035,9 +2955,6 @@ CPU	cpu
 哺	bifk
 不足挂齿	bigc
 蹦高	bigh
-保证供给	bigj
-保值功能	bign
-保证供应	bigy
 踣	bih
 不知何处	bihc
 不知好歹	bihd
@@ -3080,21 +2997,16 @@ CPU	cpu
 不知廉耻	bilc
 兵足粮广	bilg
 别离	bilh
-辨证论治	bili
 辩证逻辑	bilj
 咇	bilk
 不自量力	bill
 不知鹿死谁手	bils
 笔走龙蛇	bils
-被占领土	bilt
 鄙陋	bilv
-编组练习	bilx
 叭	bim
 败走麦城	bimc
 半殖民地	bimd
-不再满足	bimi
 半殖民地半封建	bimj
-播种面积	bimj
 叭	bimm
 八字没一撇	bimp
 别名	bimw
@@ -3109,7 +3021,6 @@ CPU	cpu
 嘣	biov
 蹦	biov
 不知疲倦	bipj
-本质区别	biqb
 不知其二	biqe
 百转千回	biqh
 鄙弃	biqh
@@ -3128,7 +3039,6 @@ CPU	cpu
 哺乳期	birq
 哺乳期	biru
 不知肉味	birw
-笔者认为	birw
 哔	bis
 不知所措	bisc
 不择手段	bisd
@@ -3154,7 +3064,6 @@ CPU	cpu
 趵突泉	bitu
 辩证统一	bity
 别	biu
-本质区别	biub
 不知其二	biue
 百转千回	biuh
 鄙弃	biuh
@@ -4760,7 +4669,6 @@ bilibili	blbl
 办不到	bnbd
 宝贝儿	bnbe
 办班	bnbg
-不能保证	bnbi
 办报	bnbk
 𰻝𰻝面	bnbm
 𰻞𰻞面	bnbm
@@ -4768,7 +4676,6 @@ bilibili	blbl
 不男不女	bnbn
 宝贝	bnbo
 百年不遇	bnby
-不能保证	bnbz
 办厂	bnca
 办成	bnca
 百鸟朝凤	bncf
@@ -7012,10 +6919,8 @@ bilibili	blbl
 办公费	bzgf
 办公会	bzgh
 办公桌	bzgi
-保证供给	bzgj
 办公楼	bzgl
 办公	bzgm
-保值功能	bzgn
 办公区	bzgq
 办公室	bzgs
 办公厅	bzgt
@@ -7084,14 +6989,12 @@ bilibili	blbl
 八字没一撇	bzmp
 边贸	bzmw
 不怎么样	bzmy
-不再满足	bzmz
 边	bzn
 办年货	bznh
 边	bznn
 百爪挠心	bznx
 边跑	bzpi
 不知疲倦	bzpj
-本质区别	bzqb
 边沁	bzqd
 不知其二	bzqe
 百转千回	bzqh
@@ -7111,7 +7014,6 @@ bilibili	blbl
 包装容器	bzrq
 包装容器	bzru
 不知肉味	bzrw
-笔者认为	bzrw
 不知所措	bzsc
 办事处	bzsc
 不择手段	bzsd
@@ -7136,7 +7038,6 @@ bilibili	blbl
 边谈	bztl
 办妥	bztm
 辩证统一	bzty
-本质区别	bzub
 边沁	bzud
 不知其二	bzue
 百转千回	bzuh
@@ -64445,6 +64346,7 @@ GPRS	gprs
 迷阵	mmiv
 靡靡之音	mmiy
 焖	mmj
+美剧	mmjb
 迷局	mmjb
 米酒	mmjd
 美酒	mmjd
