--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -33017,7 +33017,6 @@ GPRS	gprs
 会聚	hjjf
 合击	hjjg
 合金钢	hjjg
-会将	hjjh
 合家欢	hjjh
 火炬计划	hjjh
 合集	hjjj
@@ -125803,6 +125802,7 @@ Z	vyz
 无际	wgjv
 无机物	wgjw
 无解	wgjw
+未经	wgjx
 违纪	wgjx
 无关紧要	wgjy
 无机盐	wgjy
