--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -2670,6 +2670,7 @@ CPU	cpu
 变质	bhiq
 变阻器	bhiq
 抱憾终身	bhis
+变种	bhit
 部长	bhit
 变阻器	bhiu
 病志	bhiu
@@ -2906,6 +2907,7 @@ CPU	cpu
 变质	bhzq
 变阻器	bhzq
 抱憾终身	bhzs
+变种	bhzt
 部长	bhzt
 变阻器	bhzu
 病志	bhzu
@@ -3034,6 +3036,7 @@ CPU	cpu
 宾至如归	birg
 不知如何是好	birh
 别人	birj
+鄙人	birj
 哺乳类	birl
 哺乳	birm
 哺乳期	birq
@@ -3184,7 +3187,6 @@ CPU	cpu
 不见棺材不掉泪	bjgl
 不见棺材不落泪	bjgl
 闭关	bjgm
-编辑功能	bjgn
 保国	bjgo
 保管人	bjgr
 保管室	bjgs
@@ -9405,6 +9407,7 @@ bilibili	blbl
 尝试	cjsl
 常识	cjsl
 传说	cjsl
+仇视	cjsl
 传输率	cjsl
 传送	cjsm
 阐释	cjsm
@@ -12930,11 +12933,9 @@ bilibili	blbl
 纯中药	cxiy
 除夕之夜	cxiy
 纯碱	cxja
-撤销决定	cxjd
 纯洁	cxjd
 纯净	cxjh
 重修旧好	cxjh
-程序接口	cxjk
 处心积虑	cxjl
 城乡居民	cxjm
 纯净水	cxjs
@@ -14841,8 +14842,8 @@ bilibili	blbl
 答非所问	dfsw
 戴上	dfsy
 顶上	dfsy
-倒反天罡	dftg
 顶替	dftg
+倒反天罡	dftg
 都听	dfti
 顶托	dftk
 顶台	dftl
@@ -17979,7 +17980,6 @@ bilibili	blbl
 大人孩子	drhz
 躲在	dria
 躲债	drij
-的日子里	dril
 躲着	drim
 达人知命	drim
 躲灾	drin
@@ -18041,7 +18041,6 @@ bilibili	blbl
 待人以礼	dryl
 躲在	drza
 躲债	drzj
-的日子里	drzl
 躲着	drzm
 达人知命	drzm
 躲灾	drzn
@@ -22552,7 +22551,6 @@ bilibili	blbl
 放马过来	fmgl
 翻盖	fmgm
 分割	fmgn
-分泌功能	fmgn
 分管	fmgt
 翻跟头	fmgt
 分隔	fmgv
@@ -28228,10 +28226,9 @@ bilibili	blbl
 惯坏	gnhu
 狗拿耗子	gnhz
 宫	gni
-功能障碍	gnia
+官职	gnif
 怪哉	gnif
 宫	gnii
-归纳总结	gnij
 怪招	gnik
 怪罪	gnio
 寡助	gnio
@@ -28373,9 +28370,8 @@ bilibili	blbl
 惯用	gnyw
 惯用语	gnyy
 工农业总产值	gnyz
-功能障碍	gnza
+官职	gnzf
 怪哉	gnzf
-归纳总结	gnzj
 怪招	gnzk
 宫中	gnzo
 寡助	gnzo
@@ -39759,7 +39755,6 @@ GPRS	gprs
 找麻烦	ikmf
 撙	ikmf
 折磨	ikmh
-专科门诊	ikmi
 捉摸	ikmk
 执迷	ikmm
 摘帽	ikmo
@@ -39799,7 +39794,6 @@ GPRS	gprs
 招牌	ikpr
 摘牌	ikpr
 招牌式	ikps
-这恐怕是	ikps
 撞骗	ikpx
 蜇皮	ikpz
 抓	ikq
@@ -39823,7 +39817,6 @@ GPRS	gprs
 撞入	ikrm
 择日	ikrr
 晢	ikrr
-这块热土	ikrt
 抓绒	ikrx
 找	iks
 找死	iksa
@@ -39862,7 +39855,6 @@ GPRS	gprs
 指头	iktn
 抓图	ikto
 攥	ikto
-在课堂上	ikts
 折腾	iktv
 挣脱	iktv
 攥	iktx
@@ -39886,7 +39878,6 @@ GPRS	gprs
 执委会	ikwh
 执	ikwk
 指为	ikwm
-专科文凭	ikwp
 执委	ikwt
 指纹	ikwx
 絷	ikx
@@ -39926,10 +39917,9 @@ GPRS	gprs
 扎营	ikye
 摘要	ikyf
 招远	ikyg
-只可意会	ikyh
 执意	ikyh
+只可意会	ikyh
 择优	ikyj
-睁开眼睛	ikyj
 招摇	ikyk
 摘译	ikyl
 扎眼	ikyo
@@ -42771,6 +42761,7 @@ GPRS	gprs
 竹篾	itmt
 自讨没趣	itmu
 怎么	itmw
+知名	itmw
 种马	itmx
 怎么样	itmy
 造	itn
@@ -43884,16 +43875,13 @@ GPRS	gprs
 缜	ixfm
 自寻烦恼	ixfn
 骤	ixfr
-在线访谈	ixft
 驻防	ixfv
 驻港	ixgd
 组工	ixgf
 组歌	ixgf
 忠心耿耿	ixgg
 组阁	ixgj
-在线观看	ixgk
 纵观	ixgl
-造血功能	ixgn
 终归	ixgp
 组稿	ixgt
 终稿	ixgt
@@ -43955,7 +43943,6 @@ GPRS	gprs
 骓	ixjh
 终结者	ixji
 组件	ixjj
-在线监控	ixjk
 驻军	ixjl
 纸卷	ixjm
 终究	ixjn
@@ -44056,7 +44043,6 @@ GPRS	gprs
 自寻死路	ixsl
 驻守	ixsn
 终岁	ixso
-在线视频	ixsp
 终身	ixsr
 纵身	ixsr
 纵是	ixsr
@@ -44115,7 +44101,6 @@ GPRS	gprs
 纵有	ixya
 终须一别	ixyb
 纸样	ixyc
-在线阅读	ixyd
 综艺	ixye
 骤雨	ixyf
 终于	ixyg
@@ -57338,6 +57323,7 @@ GPRS	gprs
 吏治	lfid
 来犯之敌	lfid
 两者	lfif
+老者	lfif
 老资格	lfig
 聊斋	lfih
 老字号	lfih
@@ -57653,6 +57639,7 @@ GPRS	gprs
 吏治	lfzd
 来犯之敌	lfzd
 两者	lfzf
+老者	lfzf
 老资格	lfzg
 聊斋	lfzh
 老字号	lfzh
@@ -57732,7 +57719,6 @@ GPRS	gprs
 理政	lgif
 两个中国	lgig
 靓妆	lgih
-两国之间	lgij
 靓仔	lgij
 靓照	lgir
 理智	lgit
@@ -57832,7 +57818,6 @@ GPRS	gprs
 理政	lgzf
 两个中国	lgzg
 靓妆	lgzh
-两国之间	lgzj
 靓仔	lgzj
 靓照	lgzr
 理智	lgzt
@@ -58346,6 +58331,7 @@ GPRS	gprs
 凌汛	lhxd
 旅行袋	lhxd
 露馅儿	lhxe
+凉鞋	lhxf
 立项	lhxf
 疗效	lhxh
 疗效好	lhxh
@@ -63313,11 +63299,9 @@ GPRS	gprs
 磨去	mhqu
 满汉全席	mhqx
 魔	mhr
-美好日子	mhri
 盲人	mhrj
 魔	mhrk
 魔	mhrl
-美好日子	mhrz
 磨砂	mhsa
 磨碎	mhsa
 魔术	mhsc
@@ -68552,35 +68536,22 @@ GPRS	gprs
 纳	nx
 纽	nx
 宁心安神	nxas
-内心不安	nxba
-哪些变化	nxbh
-闹心吧啦	nxbl
-拿下比赛	nxbs
 纳粹党	nxcd
-内心充满	nxcm
 纳粹	nxcm
 恼羞成怒	nxcn
 脑下垂体	nxct
-内心独白	nxdb
-耐心等待	nxdd
 纽带	nxdf
-内线电话	nxdh
 纳呆	nxdi
 纳福	nxfl
 纳贡	nxgf
-哪些好处	nxhc
-宁夏回族	nxhi
 纳罕	nxhl
 宁夏回族自治区	nxhq
 宁夏回族自治区	nxhu
-宁夏回族	nxhz
 弄虚作假	nxij
 宁夏自治区	nxiq
 宁夏自治区	nxiu
-女性健康	nxjk
 纳谏	nxjl
 纽扣	nxkk
-内心空虚	nxkx
 纽伦堡	nxlb
 纳凉	nxlh
 纳兰	nxlm
@@ -68593,16 +68564,12 @@ GPRS	gprs
 难兄难弟	nxnd
 纳	nxo
 纳	nxok
-女性频道	nxpd
-内心平静	nxpj
 纳妾	nxqh
 纳气	nxqt
 纳入	nxrm
-内心深处	nxsc
 纳税人	nxsr
 纳税	nxst
 逆向思维	nxsw
-内心痛苦	nxtk
 耐心听取	nxtq
 耐心听取	nxtu
 纳妾	nxuh
@@ -68611,14 +68578,11 @@ GPRS	gprs
 纽	nxvd
 纳为	nxwm
 乜	nxx
-内心想法	nxxf
 纳西	nxxf
 纳新	nxxh
-内心写照	nxxi
 纳西族	nxxi
 纳贤	nxxu
 乜	nxxx
-内心写照	nxxz
 纳西族	nxxz
 纳音	nxyh
 纽约州	nxyi
@@ -78869,11 +78833,11 @@ GPRS	gprs
 喢	oitd
 踵	oitd
 噬	oitf
+呕吐	oiti
 吀	oiti
 吘	oiti
 吽	oiti
 呏	oiti
-呕吐	oiti
 咶	oiti
 哖	oiti
 哠	oiti
@@ -95109,7 +95073,6 @@ GPRS	gprs
 扑鼻而来	pbel
 屏风	pbfw
 辟谷	pbgm
-排版功能	pbgn
 皮包骨头	pbgt
 屁股	pbgv
 譬	pbh
@@ -95221,8 +95184,6 @@ GPRS	gprs
 攀亲	pcqh
 椑	pcrf
 皮糙肉厚	pcrh
-平常日子	pcri
-平常日子	pcrz
 枇	pcs
 朴散	pcsf
 朴素	pcsg
@@ -95268,6 +95229,7 @@ GPRS	gprs
 漂白	pdbr
 判断病情	pdbu
 泡茶	pdce
+泡菜	pdce
 派出所	pdcs
 浦城	pdcu
 派出	pdcv
@@ -98669,7 +98631,6 @@ GPRS	gprs
 汧	qdgi
 潜规则	qdgi
 浅	qdgk
-强大功能	qdgn
 清官	qdgn
 洽购	qdgo
 潜	qdgr
@@ -98836,8 +98797,8 @@ GPRS	gprs
 氿	qdww
 千叮万嘱	qdwz
 浅析	qdxc
-清晰度	qdxd
 清洗	qdxd
+清晰度	qdxd
 清醒	qdxf
 清新	qdxh
 清闲	qdxj
@@ -100729,8 +100690,8 @@ GPRS	gprs
 前半	qmbm
 前边	qmbn
 前半生	qmbs
-其貌不扬	qmby
 前辈	qmby
+其貌不扬	qmby
 前边	qmbz
 羌	qmc
 羌	qmcc
@@ -102861,9 +102822,7 @@ QQ密码	qqmm
 且行且珍惜	qxqx
 缱绻	qxqx
 全心全意	qxqy
-前些日子	qxri
 求贤若渴	qxrk
-前些日子	qxrz
 驱	qxs
 气血双补	qxsb
 骑术	qxsc
@@ -103621,9 +103580,6 @@ QQ密码	qqmm
 喏	riea
 任重而道远	riey
 认罪服法	riff
-融资功能	rign
-日子过去	rigq
-日子过去	rigu
 嚅	rih
 嚅	riha
 认罪悔过	rihg
@@ -103650,14 +103606,10 @@ QQ密码	qqmm
 中州韵	rime
 小狼毫	rime
 鼠须管	rime
-日子难熬	rina
-日子难过	ring
 融资渠道	riqd
 如醉如痴	rirc
 嚷嚷	riri
 润燥通便	ritb
-认真听取	ritq
-认真听取	ritu
 融资渠道	riud
 仁者无敌	riwd
 日臻完美	riwm
@@ -105489,9 +105441,6 @@ QQ密码	qqmm
 任重道远	rzdy
 任重而道远	rzey
 认罪服法	rzff
-融资功能	rzgn
-日子过去	rzgq
-日子过去	rzgu
 认罪悔过	rzhg
 润燥化痰	rzht
 热者寒之	rzhz
@@ -105514,8 +105463,6 @@ QQ密码	qqmm
 热胀冷缩	rzls
 如振落叶	rzly
 忍耐	rzna
-日子难熬	rzna
-日子难过	rzng
 忍耐力	rznl
 融资渠道	rzqd
 忍辱	rzra
@@ -105892,7 +105839,6 @@ QQ密码	qqmm
 事半功倍	sbgb
 食不果腹	sbgf
 事不关己	sbgj
-识别功能	sbgn
 尸骨	sbgo
 事必躬亲	sbgq
 说不过去	sbgq
@@ -106319,8 +106265,8 @@ QQ密码	qqmm
 涉案者	sdaz
 涮	sdb
 水泵	sdba
-手到病除	sdbc
 水杯	sdbc
+手到病除	sdbc
 汜	sdbc
 山东半岛	sdbd
 水波	sdbd
@@ -109434,7 +109380,6 @@ QQ密码	qqmm
 双拐	slgk
 双冠	slgl
 双关	slgm
-生理功能	slgn
 设岗	slgo
 熟练工人	slgr
 神鬼	slgr
@@ -111687,7 +111632,6 @@ QQ密码	qqmm
 身高	srgh
 时光	srgj
 曙光	srgj
-输入功能	srgn
 身管	srgt
 时隔	srgv
 顺滑	srhd
@@ -113295,7 +113239,6 @@ QQ密码	qqmm
 身无分文	swfw
 删改	swgb
 色光	swgj
-商务功能	swgn
 蚀骨	swgo
 色鬼	swgr
 甩锅	swgy
@@ -113360,6 +113303,7 @@ QQ密码	qqmm
 煞	swm
 甩卖	swmf
 色盲	swmh
+色魔	swmh
 鳝	swmi
 素未谋面	swmm
 色迷	swmm
@@ -117504,6 +117448,7 @@ QQ密码	qqmm
 贴到	tods
 同等	todt
 田地	todu
+贴地	todu
 团队	todv
 团党委	todw
 图钉	tody
@@ -119873,7 +119818,6 @@ QQ密码	qqmm
 汧	udgi
 潜规则	udgi
 浅	udgk
-强大功能	udgn
 清官	udgn
 洽购	udgo
 潜	udgr
@@ -120038,8 +119982,8 @@ QQ密码	qqmm
 氿	udww
 千叮万嘱	udwz
 浅析	udxc
-清晰度	udxd
 清洗	udxd
+清晰度	udxd
 清醒	udxf
 清新	udxh
 清闲	udxj
@@ -121907,8 +121851,8 @@ QQ密码	qqmm
 前半	umbm
 前边	umbn
 前半生	umbs
-其貌不扬	umby
 前辈	umby
+其貌不扬	umby
 前边	umbz
 羌	umc
 羌	umcc
@@ -123956,9 +123900,7 @@ QQ密码	uumm
 且行且珍惜	uxqx
 缱绻	uxqx
 全心全意	uxqy
-前些日子	uxri
 求贤若渴	uxrk
-前些日子	uxrz
 驱	uxs
 气血双补	uxsb
 骑术	uxsc
@@ -126130,8 +126072,8 @@ Z	vyz
 文言	whyh
 瘟疫	whyh
 文员	whyi
-文艺界	whyj
 望远镜	whyj
+文艺界	whyj
 妄议	whyl
 亡羊	whym
 忘忧	whyn
@@ -130323,7 +130265,6 @@ Z	vyz
 巷尾	xfwb
 幸福无比	xfwb
 学富五车	xfwc
-下午好	xfwh
 下文	xfwh
 西文	xfwh
 下位	xfwj
@@ -135564,26 +135505,20 @@ Z	vyz
 郁闭度	yabd
 硬币	yabe
 原本	yabf
-有办法	yabf
 友邦	yabg
 有病	yabh
 有别	yabi
-有步骤	yabi
 研报	yabk
 硍	yabk
 压扁	yabl
 有半	yabm
 右边	yabn
 原版	yabr
-有不少	yabs
 硬笔	yabt
-有把握	yabw
 有别于	yaby
-有必要	yaby
 有悖于	yaby
 雁北	yaby
 右边	yabz
-有步骤	yabz
 尢	yac
 原厂	yaca
 尢	yacc
@@ -135598,16 +135533,12 @@ Z	vyz
 压差	yacm
 原虫	yaco
 压船	yacq
-有出入	yacr
 有巢氏	yacs
 有车	yacs
 愿出	yacv
 原处	yacw
-有出息	yacx
-原产于	yacy
 有错	yacy
 硬碟	yada
-有点儿	yade
 雁荡	yade
 压顶	yadf
 郁达夫	yadf
@@ -135617,17 +135548,13 @@ Z	vyz
 压倒	yadj
 有待	yadk
 原动力	yadl
-有道理	yadl
 研读	yadl
 硬道理	yadl
 压断	yadm
-有多么	yadm
 原定	yadn
 压电	yado
 有的	yadr
 有的人	yadr
-有多少	yads
-有的是	yads
 有道是	yads
 雁荡山	yads
 有答	yadt
@@ -135639,7 +135566,6 @@ Z	vyz
 右耳	yaef
 有二	yaeg
 有恩	yaeo
-有耳闻	yaew
 硬	yaf
 有否	yafa
 原发病	yafb
@@ -135665,9 +135591,7 @@ Z	vyz
 研	yagi
 䶮	yagk
 右拐	yagk
-有规律	yagl
 有关	yagm
-有个人	yagr
 有鬼	yagr
 有轨	yags
 原告	yagt
@@ -135694,7 +135618,6 @@ Z	vyz
 原著	yaie
 原载	yaif
 有责	yaig
-有资格	yaig
 原子核	yaih
 原装	yaih
 硬座	yaih
@@ -135764,7 +135687,6 @@ Z	vyz
 有苦	yake
 压库	yakh
 尤	yakk
-有可能	yakn
 有空	yakn
 尤卡坦	yakt
 压垮	yaku
@@ -135792,7 +135714,6 @@ Z	vyz
 有利	yalt
 右肋	yalv
 右脸	yalv
-有理想	yalx
 有利于	yaly
 有赖于	yaly
 压力	yalz
@@ -135812,7 +135733,6 @@ Z	vyz
 郁南	yanf
 有难	yanl
 右脑	yanv
-有哪些	yanx
 奄	yao
 砚	yaoc
 厣	yaoi
@@ -135837,24 +135757,18 @@ Z	vyz
 友朋	yapv
 硬碰硬	yapy
 压强	yaqb
-有区别	yaqb
 有权	yaqc
 尤其	yaqf
 硬气功	yaqg
 厌弃	yaqh
 右倾	yaqj
-有权力	yaql
 有请	yaql
 友情	yaqn
 有钱人	yaqr
 尤其是	yaqs
-有起色	yaqs
-有前途	yaqt
 硬气	yaqt
 有趣	yaqu
 有钱	yaqy
-尤其要	yaqy
-有求于	yaqy
 有辱	yara
 有染	yard
 有若	yare
@@ -135862,7 +135776,6 @@ Z	vyz
 魇	yark
 右衽	yarl
 魇	yarl
-有人吗	yarm
 有肉	yaro
 黶	yaro
 有日	yarr
@@ -135880,7 +135793,6 @@ Z	vyz
 厌世	yasf
 尤甚	yasf
 原始股	yasg
-有时候	yash
 厌食症	yasi
 原生质	yasi
 压缩机	yasj
@@ -135902,10 +135814,8 @@ Z	vyz
 压岁钱	yasu
 尤胜	yasv
 原色	yasw
-有所为	yasw
 压缩	yasx
 右上	yasy
-有损于	yasy
 厌食症	yasz
 原生质	yasz
 研讨班	yatb
@@ -135916,7 +135826,6 @@ Z	vyz
 硬挺	yatk
 研讨	yatl
 砚台	yatl
-有条理	yatl
 原糖	yatm
 原图	yato
 原题	yatr
@@ -135926,7 +135835,6 @@ Z	vyz
 压条	yatw
 压	yau
 压强	yaub
-有区别	yaub
 有权	yauc
 殪	yaud
 尤其	yauf
@@ -135934,18 +135842,13 @@ Z	vyz
 厌弃	yauh
 右倾	yauj
 压	yauk
-有权力	yaul
 有请	yaul
 友情	yaun
 有钱人	yaur
 尤其是	yaus
-有起色	yaus
-有前途	yaut
 硬气	yaut
 有趣	yauu
 有钱	yauy
-尤其要	yauy
-有求于	yauy
 郁	yav
 郁	yavv
 厌恶	yawf
@@ -136002,7 +135905,6 @@ Z	vyz
 又爱又恨	yayh
 有意者	yayi
 厌氧菌	yayj
-有意见	yayj
 压抑	yayk
 友谊	yayl
 右翼	yayl
@@ -136012,14 +135914,8 @@ Z	vyz
 原野	yayo
 友谊赛	yays
 愿与	yays
-有意思	yays
-有意识	yays
 厌氧	yayt
-有一天	yayt
-有一套	yayt
 原以为	yayw
-有一位	yayw
-有影响	yayx
 有缘	yayx
 有益于	yayy
 有孕	yayz
@@ -136034,7 +135930,6 @@ Z	vyz
 原著	yaze
 原载	yazf
 有责	yazg
-有资格	yazg
 原子核	yazh
 原装	yazh
 硬座	yazh
@@ -137014,7 +136909,6 @@ Z	vyz
 一米	ydmm
 溢	ydmo
 一毛钱	ydmq
-有点茫然	ydmr
 一码事	ydms
 沂蒙山	ydms
 游牧	ydmt
@@ -138241,9 +138135,8 @@ Z	vyz
 玉髓	ygso
 元帅	ygsp
 于是	ygsr
-应该说是	ygss
-艳光四射	ygss
 运输	ygss
+艳光四射	ygss
 运算	ygst
 远胜	ygsv
 艳色	ygsw
@@ -138770,6 +138663,7 @@ Z	vyz
 意愿	yhya
 夜游	yhyd
 意淫	yhyd
+颜艺	yhye
 夜莺	yhye
 夜雨	yhyf
 应于	yhyg
@@ -143079,7 +142973,6 @@ Z	vyz
 迎春	ywcg
 迎春花	ywch
 怨仇	ywcj
-用材林	ywcl
 用词	ywcl
 鱼虫	ywco
 用船	ywcq
@@ -147643,7 +147536,6 @@ Z	vyz
 指明	zkmr
 掷	zkmv
 指名	zkmw
-专科门诊	zkmz
 招	zkn
 指南车	zknc
 执牛耳	zkne
@@ -147678,7 +147570,6 @@ Z	vyz
 招牌	zkpr
 摘牌	zkpr
 招牌式	zkps
-这恐怕是	zkps
 撞骗	zkpx
 蜇皮	zkpz
 抓	zkq
@@ -147702,7 +147593,6 @@ Z	vyz
 撞入	zkrm
 择日	zkrr
 晢	zkrr
-这块热土	zkrt
 抓绒	zkrx
 找	zks
 找死	zksa
@@ -147741,7 +147631,6 @@ Z	vyz
 指头	zktn
 抓图	zkto
 攥	zkto
-在课堂上	zkts
 折腾	zktv
 挣脱	zktv
 攥	zktx
@@ -147765,7 +147654,6 @@ Z	vyz
 执委会	zkwh
 执	zkwk
 指为	zkwm
-专科文凭	zkwp
 执委	zkwt
 指纹	zkwx
 絷	zkx
@@ -147805,10 +147693,9 @@ Z	vyz
 扎营	zkye
 摘要	zkyf
 招远	zkyg
-只可意会	zkyh
 执意	zkyh
+只可意会	zkyh
 择优	zkyj
-睁开眼睛	zkyj
 招摇	zkyk
 摘译	zkyl
 扎眼	zkyo
@@ -150646,6 +150533,7 @@ Z	vyz
 造模	ztmc
 知名度	ztmd
 怎么	ztme
+知名	ztme
 怎么会	ztmh
 怎么就	ztmj
 朱门	ztmj
@@ -151766,16 +151654,13 @@ Z	vyz
 缜	zxfm
 自寻烦恼	zxfn
 骤	zxfr
-在线访谈	zxft
 驻防	zxfv
 驻港	zxgd
 组工	zxgf
 组歌	zxgf
 忠心耿耿	zxgg
 组阁	zxgj
-在线观看	zxgk
 纵观	zxgl
-造血功能	zxgn
 终归	zxgp
 组稿	zxgt
 终稿	zxgt
@@ -151840,7 +151725,6 @@ Z	vyz
 终将	zxjh
 骓	zxjh
 组件	zxjj
-在线监控	zxjk
 驻军	zxjl
 纸卷	zxjm
 终究	zxjn
@@ -151942,7 +151826,6 @@ Z	vyz
 自寻死路	zxsl
 驻守	zxsn
 终岁	zxso
-在线视频	zxsp
 终身	zxsr
 纵身	zxsr
 纵是	zxsr
@@ -152003,7 +151886,6 @@ Z	vyz
 纵有	zxya
 终须一别	zxyb
 纸样	zxyc
-在线阅读	zxyd
 综艺	zxye
 骤雨	zxyf
 终于	zxyg
